--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,9 +5,7 @@
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
-    <color name="light_background">#FAF5EF</color>
-    <color name="dark_background">#121212</color>
+    <color name="black">#FAF5EF</color>
+    <color name="white">#121212</color>
 
 </resources>
